themes and fonts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="nama">Nama</string>
     <string name="sign_out">sign out</string>
     <string name="product_picture">Product Picture</string>
+    <string name="merk">Merk</string>
 </resources>
