--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="email">Email</string>
     <string name="error_email_not_valid">Email not valid</string>
     <string name="error_password_not_valid">Password not valid</string>
+    <string name="category_image">Category image</string>
+    <string name="category">Category</string>
 </resources>
