--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,9 @@
     <string name="error_password_not_valid">Password not valid</string>
     <string name="category_image">Category image</string>
     <string name="category">Category</string>
+    <string name="add_product">Add Product</string>
+    <string name="brand">Brand</string>
+    <string name="description">Description</string>
+    <string name="current_price">Current Price</string>
+    <string name="save">Save</string>
 </resources>
