--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="cost">Cost</string>
     <string name="start_price">Start Price</string>
     <string name="end_price">End Price</string>
+    <string name="delete">Hapus</string>
 </resources>
