--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="upload_image">Upload Image</string>
     <string name="image_is_required">Image is required</string>
     <string name="search_product">Find Product</string>
+    <string name="update_product">Update Product</string>
 </resources>
