--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="title_profile">Profile</string>
     <string name="title_home">Home</string>
     <string name="product_name">Product Name</string>
-    <string name="product_price">Rp.XXXXXX</string>
+    <string name="product_price">Rp%s</string>
     <string name="kategori">Kategori</string>
     <string name="edit_product">Ubah Produk</string>
     <string name="name">Name</string>
@@ -54,4 +54,5 @@
     <string name="image_is_required">Image is required</string>
     <string name="search_product">Find Product</string>
     <string name="update_product">Update Product</string>
+    <string name="product_not_found">Product not found</string>
 </resources>
