feat: localization indo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">HargaIn</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name" translatable="false">HargaIn</string>
+    <string name="action_settings" translatable="false">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -11,10 +11,10 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="button_text_ok">Ok</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="prompt_email" translatable="false">Email</string>
+    <string name="prompt_password" translatable="false">Password</string>
+    <string name="action_sign_in" translatable="false">Sign in</string>
+    <string name="action_sign_in_short" translatable="false">Sign in</string>
     <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
@@ -29,12 +29,10 @@
     <string name="title_home">Home</string>
     <string name="product_name">Product Name</string>
     <string name="product_price">Rp%s</string>
-    <string name="kategori">Kategori</string>
-    <string name="edit_product">Ubah Produk</string>
+    <string name="edit_product">Edit Product</string>
     <string name="name">Name</string>
-    <string name="sign_out">Sign out</string>
+    <string name="sign_out" translatable="false">Sign out</string>
     <string name="product_picture">Product Picture</string>
-    <string name="merk">Merk</string>
     <string name="email">Email</string>
     <string name="error_email_not_valid">Email not valid</string>
     <string name="error_password_not_valid">Password not valid</string>
@@ -45,14 +43,18 @@
     <string name="description">Description</string>
     <string name="current_price">Current Price</string>
     <string name="save">Save</string>
-    <string name="title_activity_testing">TestingActivity</string>
     <string name="cost">Cost</string>
-    <string name="start_price_prediction">Start Price for Prediction</string>
-    <string name="end_price_prediction">End Price for Prediction</string>
-    <string name="delete">Hapus</string>
+    <string name="start_price_prediction" translatable="false">Start Price for Prediction</string>
+    <string name="end_price_prediction" translatable="false">End Price for Prediction</string>
     <string name="upload_image">Upload Image</string>
     <string name="image_is_required">Image is required</string>
     <string name="search_product">Find Product</string>
     <string name="update_product">Update Product</string>
     <string name="product_not_found">Product not found</string>
+    <string name="sales_prediction">Sales Prediction</string>
+    <string name="profit_prediction">Profit Prediction</string>
+    <string name="selling_price">Selling Price</string>
+    <string name="no_prediction_yet">No prediction yet</string>
+    <string name="total_sales">Total Sales</string>
+    <string name="total_profit">Total Profit (in Rupiah)</string>
 </resources>
