--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">HargaIn</string>
-    <string name="action_settings" translatable="false">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="button_text_ok">Ok</string>
-    <!-- Strings related to login -->
-    <string name="prompt_email" translatable="false">Email</string>
-    <string name="prompt_password" translatable="false">Password</string>
+    <string name="button_text_ok">OK</string>
     <string name="action_sign_in" translatable="false">Sign in</string>
-    <string name="action_sign_in_short" translatable="false">Sign in</string>
-    <string name="welcome">"Welcome!"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="title_search">Search</string>
     <string name="title_profile">Profile</string>
@@ -30,12 +9,8 @@
     <string name="product_name">Product Name</string>
     <string name="product_price">Rp%s</string>
     <string name="edit_product">Edit Product</string>
-    <string name="name">Name</string>
     <string name="sign_out" translatable="false">Sign out</string>
-    <string name="product_picture">Product Picture</string>
     <string name="email">Email</string>
-    <string name="error_email_not_valid">Email not valid</string>
-    <string name="error_password_not_valid">Password not valid</string>
     <string name="category_image">Category image</string>
     <string name="category">Category</string>
     <string name="add_product">Add Product</string>
@@ -44,11 +19,8 @@
     <string name="current_price">Current Price</string>
     <string name="save">Save</string>
     <string name="cost">Cost</string>
-    <string name="start_price_prediction" translatable="false">Start Price for Prediction</string>
-    <string name="end_price_prediction" translatable="false">End Price for Prediction</string>
     <string name="upload_image">Upload Image</string>
     <string name="image_is_required">Image is required</string>
-    <string name="search_product">Find Product</string>
     <string name="update_product">Update Product</string>
     <string name="product_not_found">Product not found</string>
     <string name="sales_prediction">Sales Prediction</string>
